plugins {
    id 'fabric-loom' version '1.6-SNAPSHOT'
    id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

loom {
    accessWidenerPath = file("src/main/resources/enchancement.accesswidener")
}

repositories {
    maven {
        name "cardinal components"
        url "https://maven.ladysnake.org/releases"
    }
    maven {
        name "mod menu"
        url "https://maven.terraformersmc.com"
    }
    maven {
        name "modrinth"
        url "https://api.modrinth.com/maven"
    }
    maven {
        name "jitpack"
        url "https://jitpack.io"
    }
}

dependencies {
    minecraft "com.mojang:minecraft:${minecraft_version}"
    mappings "net.fabricmc:yarn:${yarn_mappings}:v2"
    modImplementation "net.fabricmc:fabric-loader:${loader_version}"

    include modApi("org.ladysnake.cardinal-components-api:cardinal-components-base:${cardinal_components_version}")
    include modApi("org.ladysnake.cardinal-components-api:cardinal-components-entity:${cardinal_components_version}")
    include modApi("org.ladysnake.cardinal-components-api:cardinal-components-world:${cardinal_components_version}")
    include modApi("maven.modrinth:midnightlib:${midnightlib_version}")

    modImplementation "net.fabricmc.fabric-api:fabric-api:${fabric_version}"
    modRuntimeOnly "maven.modrinth:tooltipfix:${tooltipfix_version}"

//    modCompileOnly("com.github.apace100:apoli:${apoli_version}") {
//        exclude(group: "*")
//    }
    modCompileOnly "maven.modrinth:sodium:${sodium_version}"
    modRuntimeOnly "maven.modrinth:sodium:${sodium_version}"
//    modCompileOnly "maven.modrinth:spectrum:${spectrum_version}"

    modRuntimeOnly "com.terraformersmc:modmenu:${mod_menu_version}"
}

processResources {
    inputs.property "version", project.version

    filesMatching("fabric.mod.json") {
        expand "version": project.version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 21
}

java {
    withSourcesJar()

    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

jar {
    from("LICENSE") {
        rename { "${it}_${project.archivesBaseName}" }
    }
}